TP-1899 Fix overflow on landing pages

--- a/public/themes/custom/palvelumanuaali/components/00-base/03-site/_base.scss
+++ b/public/themes/custom/palvelumanuaali/components/00-base/03-site/_base.scss
@@ -21,7 +21,7 @@ body {
 
 .main {
   display: block; /* Fix for IE weirdness */
-  max-width: $content-max-width;
+  max-width: 100%;
   flex: 1;
   .main-content {
     @include make-col();
